--- a/src/views/Overview/index.scss
+++ b/src/views/Overview/index.scss
@@ -84,17 +84,21 @@
       border-radius: 20px/20px;
       padding: 15px;
 
+      @include max-media(tablet) {
+        margin-bottom: 3rem;
+      }
+
       &-sub-header {
         font-size: 3.5rem;
         font-weight: bold;
         width: 100%;
         margin-bottom: 1rem;
 
-        @include max-media(tablet){
+        @include max-media(tablet) {
           font-size: 2.5rem;
         }
 
-        @include max-media(mobile){
+        @include max-media(mobile) {
           font-size: 1.5rem;
         }
       }
